--- a/src/presentation/app/dashboard/pages/home/home.css
+++ b/src/presentation/app/dashboard/pages/home/home.css
@@ -1,4 +1,9 @@
-
+@font-face {
+  font-family: 'Get Schwifty';
+  src: url('../../../../../assets/fonts/get-schwifty.woff') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 .container{
     width: 100%;/* 
     height: 100vh;  */
@@ -9,6 +14,33 @@
     img{
         max-width: 500px;
     }
+}
+
+.title {
+  position: absolute;
+  top: 2;
+  /* bottom: 0.8em; */
+  width: 100%;
+  text-align: center;
+  font-family: 'Get Schwifty';
+  font-size: clamp(4rem, calc(2vw + 3rem), 10rem);
+  color: #08BAE3;
+  z-index: 50;
+  -webkit-text-stroke: 1px rgba(0,0,0,0.5);
+  
+  span {
+    font-size: 0.5em;
+  }
+}
+
+.title.middle {
+  -webkit-text-stroke: 0.1em #FFF765;
+  z-index: 49;
+}
+
+.title.bottom {
+  -webkit-text-stroke: 0.4em black;
+  z-index: 48;
 }
 
 @keyframes show{
