--- a/src/presentation/app/dashboard/pages/home/home.css
+++ b/src/presentation/app/dashboard/pages/home/home.css
@@ -4,30 +4,29 @@
   font-weight: normal;
   font-style: normal;
 }
-.container{
-    width: 100%;/* 
-    height: 100vh;  */
-    /* overflow: scroll; */
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    img{
-        max-width: 500px;
-    }
+
+.container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+
+  img {
+    max-width: 500px;
+  }
 }
 
 .title {
   position: absolute;
   top: 2;
-  /* bottom: 0.8em; */
   width: 100%;
   text-align: center;
   font-family: 'Get Schwifty';
   font-size: clamp(4rem, calc(2vw + 3rem), 10rem);
   color: #08BAE3;
   z-index: 50;
-  -webkit-text-stroke: 1px rgba(0,0,0,0.5);
-  
+  -webkit-text-stroke: 1px rgba(0, 0, 0, 0.5);
+
   span {
     font-size: 0.5em;
   }
@@ -43,26 +42,29 @@
   z-index: 48;
 }
 
-@keyframes show{
-    from {
-        opacity: 0;
-        scale: 25%;
-    }
+@keyframes show {
+  from {
+    opacity: 0;
+    scale: 25%;
+  }
 
-    to{
-        opacity: 1;
-        scale: 100%;
-    }
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
 }
 
-.ff{
-    view-timeline-name: --image;
-    view-timeline-axis: block;
+.ff {
+  view-timeline-name: --image;
+  view-timeline-axis: block;
 
-    animation-timeline: --image;
-    animation-name: show;
+  animation-timeline: --image;
+  animation-name: show;
 
-    animation-range: entry 25% cover 40%;
-    animation-fill-mode: both;
+  animation-range: entry 25% cover 40%;
+  animation-fill-mode: both;
 }
 
+.icon {
+  filter: drop-shadow(1px 1px 6px #18fa10);
+}
